# arcadia

./: Cargo.toml  compose.yml
.github/workflows/: backend.yml
api/: Cargo.toml
api/src/: api_doc.rs  env.rs  lib.rs  main.rs
api/src/handlers/: announce_handler.rs  artist_handler.rs  auth_handler.rs  conversation_handler.rs  edition_group_handler.rs  forum_handler.rs  gift_handler.rs  home_handler.rs  invitation_handler.rs  mod.rs  (+12 more)
api/tests/: common.rs  test_announce.rs  test_auth.rs  test_torrent.rs
backend/: .env.ci  .env.docker  .env.example  Cargo.toml
backend/api/: .env.example  Cargo.toml
backend/src/: env.rs  lib.rs  main.rs
backend/tests/: common.rs
common/: Cargo.toml
common/src/: lib.rs
cron-jobs/: Cargo.toml
cron-jobs/src/: env.rs  lib.rs  main.rs  store.rs
docs/src/: dev-setup.md
storage/: Cargo.toml
storage/src/: connection_pool.rs  error.rs  lib.rs
storage/src/models/: mod.rs
storage/src/repositories/: announce_repository.rs  artist_repository.rs  auth_repository.rs  conversation_repository.rs  edition_group_repository.rs  forum_repository.rs  gift_repository.rs  invitation_repository.rs  master_group_repository.rs  notification_repository.rs  peer_repository.rs  series_repository.rs  stats_repository.rs  subscriptions_repository.rs  title_group_comment_repository.rs  title_group_repository.rs  torrent_report_repository.rs  torrent_repository.rs  torrent_request_repository.rs  torrent_request_vote_repository.rs  user_application_repository.rs  user_repository.rs  wiki_repository.rs
tracker/extracker/: .env  .env.docker
(+146 files in other folders)
