[package]
name = "arcadia-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
arcadia-common = { path = "../common"}
argon2 = "0.5.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "ipnetwork" ] }
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
rand = "0.9.0"
